Regression: Crash in sculpt mode using shift+h #101699

Closed
opened 2022-10-08 12:55:01 +02:00 by Nahuel Belich · 12 comments

System Information
Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-07 22:54, hash: 3d209d1619
Worked: 3.3
Caused by 22c3db72ca

Short description of error
If you try to hide from object mode using shift+h without previously set a face set it crashes.
Crash will not happen with default cube (reads face_sets correctly)

Exact steps for others to reproduce the error

  • Delete default cube and add new
  • enter sculpt mode
  • Press shift+h (same goes for Alt+H but it wont crash if D16199 is applied)
  • Crash
**System Information** Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-07 22:54, hash: `3d209d1619` Worked: 3.3 Caused by 22c3db72ca **Short description of error** If you try to hide from object mode using shift+h without previously set a face set it crashes. Crash will not happen with default cube (reads `face_sets` correctly) **Exact steps for others to reproduce the error** - Delete default cube and add new - enter sculpt mode - Press shift+h (same goes for Alt+H but it wont crash if [D16199](https://archive.blender.org/developer/D16199) is applied) - Crash
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

never mind found what cause the error, im not sure why it make it crash thoug, but its not a offical add on, ill poke the author in twitter.

Python: Traceback (most recent call last):

File "/home/belich/.config/blender/3.4/scripts/addons/b3dsdf/__init__.py", line 135, in poll
  return context.space_data.node_tree

AttributeError: 'SpaceView3D' object has no attribute 'node_tree' # Error
Preferences saved # Info
bpy.ops.sculpt.sculptmode_toggle() # Operator

blender.crash.txt

never mind found what cause the error, im not sure why it make it crash thoug, but its not a offical add on, ill poke the author in twitter. Python: Traceback (most recent call last): ``` File "/home/belich/.config/blender/3.4/scripts/addons/b3dsdf/__init__.py", line 135, in poll return context.space_data.node_tree ``` AttributeError: 'SpaceView3D' object has no attribute 'node_tree' # Error Preferences saved # Info bpy.ops.sculpt.sculptmode_toggle() # Operator [blender.crash.txt](https://archive.blender.org/developer/F13637326/blender.crash.txt)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm the crash. I'll check

Thanks for the report. I can confirm the crash. I'll check
Pratik Borhade self-assigned this 2022-10-10 10:59:41 +02:00
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

First bad commit: 22c3db72ca
@JosephEagar ^
Crash triggers due to accessing unreadable memory.

First bad commit: 22c3db72ca @JosephEagar ^ Crash triggers due to accessing unreadable memory.
Pratik Borhade changed title from Crash in sculpt mode using shift+h to Regression: Crash in sculpt mode using shift+h 2022-10-10 11:40:16 +02:00
Pratik Borhade removed their assignment 2022-10-10 11:40:16 +02:00
Member

easy fix would be: cancel sculpt_face_sets_change_visibility_exec operator when face_sets value is NULL
But it'll break the consistency: In previous versions newly added mesh also has one face set by default, I guess.

easy fix would be: cancel `sculpt_face_sets_change_visibility_exec` operator when `face_sets` value is NULL But it'll break the consistency: In previous versions newly added mesh also has one face set by default, I guess.
Pratik Borhade self-assigned this 2022-10-10 12:08:43 +02:00
Member

But it'll break the consistency: In previous versions newly added mesh also has one face set by default, I guess.

Commit responsible for it seems different. I'll open a separate report for that: #101722 (Regression: Missing default face set for primitive meshes)
For this report simple If check is the fix. Submitted the fix: D16206: Fix #101699: Crash on hiding all face sets

> But it'll break the consistency: In previous versions newly added mesh also has one face set by default, I guess. Commit responsible for it seems different. I'll open a separate report for that: #101722 (Regression: Missing default face set for primitive meshes) For this report simple `If check` is the fix. Submitted the fix: [D16206: Fix #101699: Crash on hiding all face sets](https://archive.blender.org/developer/D16206)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pratik Borhade removed their assignment 2022-10-11 11:07:09 +02:00
Joseph Eagar was assigned by Pratik Borhade 2022-10-11 11:07:09 +02:00
Member

Fixed: da25006bc4

Fixed: da25006bc4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101699
No description provided.